<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ejerciciocontroles01_02.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/kfc"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Primer Plato" />

            <CheckBox
                android:id="@+id/cb_ensalada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbensalada" />

            <CheckBox
                android:id="@+id/cb_twister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbtwister" />

            <CheckBox
                android:id="@+id/cb_boxmaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbboxmaster" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Segundo Plato" />

            <CheckBox
                android:id="@+id/cb_tiras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbtiras" />

            <CheckBox
                android:id="@+id/cb_alitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbalitas" />

            <CheckBox
                android:id="@+id/cb_rocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbrocks" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Button
            android:id="@+id/btnpedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="pulsarverpedido"
            android:text="@string/btpedido" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@+id/btnpedido">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/radioGroup2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Bebida" />

                <RadioGroup
                    android:id="@+id/rg_bebida"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/button"
                    android:layout_toEndOf="@+id/textView3"
                    android:layout_toRightOf="@+id/textView3"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/rb_si"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Si" />

                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="No" />
                </RadioGroup>
            </LinearLayout>

            <Spinner
                android:id="@+id/sp_refrescos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
